--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,8 @@
 name = "typesinfo"
 version = "0.1.0"
 edition = "2021"
-
+description = "manipulate tyeps"
+license="GPL"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
